--- a/bin/views/shop/index.hbs
+++ b/bin/views/shop/index.hbs
@@ -5,11 +5,11 @@
             <div class="thumbnail">
                 <img src={{ this.imagePath }} alt="..." class="img-responsive">
                 <div class="caption">
-                    <h3>Thumbnail label</h3>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur debitis delectus deserunt dolore dolorem eum expedita, inventore nobis omnis perferendis possimus quas repellat soluta, sunt voluptate, voluptates! Assumenda, nulla?</p>
+                    <h3> {{ this.title }} </h3>
+                    <p class="description">{{ this.description }} </p>
                     <div class="clearfix">
-                        <div class="price pull-left">$12</div>
-                        <a href="#" class="btn btn-success pull-right" role="button">Button</a>
+                        <div class="price pull-left">{{ this.price }} </div>
+                        <a href="#" class="btn btn-success pull-right" role="button">Buy</a>
                     </div>
                 </div>
             </div>
